--- a/trading/fundamentals/risk-management.mdx
+++ b/trading/fundamentals/risk-management.mdx
@@ -13,27 +13,11 @@ icon: 'shield-check'
 
 ## The Foundation of Trading Success
 
-<div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700 my-8">
-  <div className="flex items-center gap-4 mb-4">
-    <div className="w-12 h-12 bg-slate-800 rounded-xl flex items-center justify-center border border-slate-600">
-      <Icon icon="shield" size={24} className="text-slate-300" />
-    </div>
-    <div>
-      <h3 className="text-xl font-bold text-slate-200">Capital Preservation First</h3>
-      <p className="text-slate-400 text-sm">Protecting your capital is more important than making profits</p>
-    </div>
-  </div>
-  <p className="text-slate-300">
-    Risk management is the difference between successful long-term trading and eventual account blow-up. It's not about being right all the time - it's about managing your losses when you're wrong and maximizing profits when you're right.
-  </p>
+Risk management is the difference between successful long-term trading and eventual account blow-up. It's not about being right all the time - it's about managing your losses when you're wrong and maximizing profits when you're right.
 
-  <div className="bg-red-900/20 border border-red-800 p-4 rounded-lg mt-6">
-    <h4 className="text-red-300 font-semibold mb-2">Critical Reality Check</h4>
-    <p className="text-red-200 text-sm">
-      <strong>90% of day traders lose money.</strong> The primary reason isn't lack of market knowledge—it's poor risk management. Even professional traders are wrong 40-60% of the time, but they stay profitable through disciplined risk control.
-    </p>
-  </div>
-</div>
+<Warning>
+  <strong>90% of day traders lose money.</strong> The primary reason isn't lack of market knowledge—it's poor risk management. Even professional traders are wrong 40-60% of the time, but they stay profitable through disciplined risk control.
+</Warning>
 
 ## Core Risk Management Principles
 
@@ -41,9 +25,9 @@ icon: 'shield-check'
   <div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
     <div className="flex items-center gap-3 mb-4">
       <div className="w-10 h-10 bg-slate-800 rounded-xl flex items-center justify-center border border-slate-600">
-        <span className="text-white text-lg"></span>
+        <Icon icon="dollar-sign" size={24} className="text-slate-300" />
       </div>
-      <h3 className="text-lg font-semibold text-slate-200">Position Sizing</h3>
+      <span className="text-lg font-semibold text-slate-200">Position Sizing</span>
     </div>
     <p className="text-slate-400 text-sm mb-4">
       Determining the appropriate amount of capital to risk on each trade based on your account size and risk tolerance.
@@ -67,9 +51,9 @@ icon: 'shield-check'
   <div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
     <div className="flex items-center gap-3 mb-4">
       <div className="w-10 h-10 bg-slate-800 rounded-xl flex items-center justify-center">
-        <span className="text-white text-lg"></span>
+        <Icon icon="x" size={24} className="text-slate-300" />
       </div>
-      <h3 className="text-lg font-semibold text-slate-200">Stop Losses</h3>
+      <span className="text-lg font-semibold text-slate-200">Stop Losses</span>
     </div>
     <p className="text-slate-400 text-sm mb-4">
       Predetermined exit points that limit your losses when trades move against you.
@@ -93,9 +77,9 @@ icon: 'shield-check'
   <div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
     <div className="flex items-center gap-3 mb-4">
       <div className="w-10 h-10 bg-slate-800 rounded-xl flex items-center justify-center">
-        <span className="text-white text-lg"></span>
+        <Icon icon="vault" size={24} className="text-slate-300" />
       </div>
-      <h3 className="text-lg font-semibold text-slate-200">Diversification</h3>
+      <span className="text-lg font-semibold text-slate-200">Diversification</span>
     </div>
     <p className="text-slate-400 text-sm mb-4">
       Spreading risk across different assets, sectors, and strategies to reduce overall portfolio risk.
@@ -119,9 +103,9 @@ icon: 'shield-check'
   <div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
     <div className="flex items-center gap-3 mb-4">
       <div className="w-10 h-10 bg-slate-800 rounded-xl flex items-center justify-center">
-        <span className="text-white text-lg">scale</span>
+        <Icon icon="radio" size={24} className="text-slate-300" />
       </div>
-      <h3 className="text-lg font-semibold text-slate-200">Risk-Reward Ratio</h3>
+      <span className="text-lg font-semibold text-slate-200">Risk-Reward Ratio</span>
     </div>
     <p className="text-slate-400 text-sm mb-4">
       The relationship between potential profit and potential loss on each trade.
@@ -144,537 +128,6 @@ icon: 'shield-check'
 
 </div>
 
-## Position Sizing Methods
-
-<Tabs defaultValue="percentage">
-  <TabsList className="grid w-full grid-cols-4">
-    <TabsTrigger value="percentage">Percentage Method</TabsTrigger>
-    <TabsTrigger value="kelly">Kelly Criterion</TabsTrigger>
-    <TabsTrigger value="atr">ATR Method</TabsTrigger>
-    <TabsTrigger value="volatility">Volatility-Based</TabsTrigger>
-  </TabsList>
-
-  <TabsContent value="percentage" className="mt-6">
-    <div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
-      <h3 className="text-xl font-semibold text-slate-200 mb-4">Fixed Percentage Risk Method</h3>
-
-      <div className="bg-slate-900/50 dark:bg-slate-800 p-4 rounded-lg border border-slate-200 dark:border-slate-700 mb-4">
-        <p className="font-medium text-slate-300 mb-2">Formula:</p>
-        <code className="text-sm bg-slate-100 dark:bg-slate-700 px-2 py-1 rounded">
-          Position Size = (Account Value × Risk %) ÷ (Entry Price - Stop Loss Price)
-        </code>
-      </div>
-
-      <div className="space-y-4">
-        <div>
-          <h4 className="font-semibold text-slate-300 mb-2">Example Calculation</h4>
-          <div className="bg-slate-50 dark:bg-slate-800/50 p-4 rounded-lg space-y-2 text-sm">
-            <p><strong>Account Value:</strong> $10,000</p>
-            <p><strong>Risk per Trade:</strong> 2%</p>
-            <p><strong>Entry Price:</strong> $50</p>
-            <p><strong>Stop Loss:</strong> $48</p>
-            <p><strong>Risk per Share:</strong> $2</p>
-            <p><strong>Total Risk:</strong> $10,000 × 0.02 = $200</p>
-            <p><strong>Position Size:</strong> $200 ÷ $2 = 100 shares</p>
-          </div>
-        </div>
-
-        <div className="grid grid-cols-2 gap-4">
-          <div>
-            <h4 className="font-semibold text-slate-300 mb-2">Advantages</h4>
-            <ul className="text-sm text-slate-400 space-y-1">
-              <li>• Simple to calculate</li>
-              <li>• Consistent risk level</li>
-              <li>• Easy to understand</li>
-              <li>• Prevents over-leveraging</li>
-            </ul>
-          </div>
-
-          <div>
-            <h4 className="font-semibold text-slate-300 mb-2">Disadvantages</h4>
-            <ul className="text-sm text-slate-400 space-y-1">
-              <li>• Doesn't consider win rate</li>
-              <li>• Ignores opportunity size</li>
-              <li>• May be too conservative</li>
-              <li>• Fixed approach</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </TabsContent>
-
-  <TabsContent value="kelly" className="mt-6">
-    <div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
-      <h3 className="text-xl font-semibold text-slate-200 mb-4">Kelly Criterion Method</h3>
-
-      <div className="bg-slate-900/50 dark:bg-slate-800 p-4 rounded-lg border border-slate-200 dark:border-slate-700 mb-4">
-        <p className="font-medium text-slate-300 mb-2">Formula:</p>
-        <code className="text-sm bg-slate-100 dark:bg-slate-700 px-2 py-1 rounded">
-          f = (bp - q) ÷ b
-        </code>
-        <p className="text-xs text-slate-400 mt-2">
-          Where: f = fraction to bet, b = odds received, p = win probability, q = loss probability
-        </p>
-      </div>
-
-      <div className="space-y-4">
-        <div>
-          <h4 className="font-semibold text-slate-300 mb-2">Example Calculation</h4>
-          <div className="bg-slate-50 dark:bg-slate-800/50 p-4 rounded-lg space-y-2 text-sm">
-            <p><strong>Win Rate (p):</strong> 60% (0.6)</p>
-            <p><strong>Loss Rate (q):</strong> 40% (0.4)</p>
-            <p><strong>Average Win:</strong> $300</p>
-            <p><strong>Average Loss:</strong> $200</p>
-            <p><strong>Odds (b):</strong> $300/$200 = 1.5</p>
-            <p><strong>Kelly %:</strong> (1.5 × 0.6 - 0.4) ÷ 1.5 = 33.3%</p>
-            <p className="text-gray-600 dark:text-gray-400"><strong>Recommended:</strong> Use 25% of Kelly (8.3%)</p>
-          </div>
-        </div>
-
-        <div className="grid grid-cols-2 gap-4">
-          <div>
-            <h4 className="font-semibold text-slate-300 mb-2">Advantages</h4>
-            <ul className="text-sm text-slate-400 space-y-1">
-              <li>• Mathematically optimal</li>
-              <li>• Considers win/loss ratio</li>
-              <li>• Maximizes long-term growth</li>
-              <li>• Accounts for edge</li>
-            </ul>
-          </div>
-
-          <div>
-            <h4 className="font-semibold text-slate-300 mb-2">Disadvantages</h4>
-            <ul className="text-sm text-slate-400 space-y-1">
-              <li>• Can suggest high risk</li>
-              <li>• Requires accurate statistics</li>
-              <li>• High volatility</li>
-              <li>• Complex calculation</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </TabsContent>
-
-  <TabsContent value="atr" className="mt-6">
-    <div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
-      <h3 className="text-xl font-semibold text-slate-200 mb-4">ATR-Based Position Sizing</h3>
-
-      <div className="bg-slate-900/50 dark:bg-slate-800 p-4 rounded-lg border border-slate-200 dark:border-slate-700 mb-4">
-        <p className="font-medium text-slate-300 mb-2">Formula:</p>
-        <code className="text-sm bg-slate-100 dark:bg-slate-700 px-2 py-1 rounded">
-          Position Size = (Account Risk) ÷ (ATR × Multiplier)
-        </code>
-        <p className="text-xs text-slate-400 mt-2">
-          ATR Multiplier typically ranges from 1.5 to 3.0
-        </p>
-      </div>
-
-      <div className="space-y-4">
-        <div>
-          <h4 className="font-semibold text-slate-300 mb-2">Example Calculation</h4>
-          <div className="bg-slate-50 dark:bg-slate-800/50 p-4 rounded-lg space-y-2 text-sm">
-            <p><strong>Account Value:</strong> $10,000</p>
-            <p><strong>Risk per Trade:</strong> 1% = $100</p>
-            <p><strong>Stock ATR:</strong> $2.50</p>
-            <p><strong>ATR Multiplier:</strong> 2.0</p>
-            <p><strong>Stop Distance:</strong> $2.50 × 2.0 = $5.00</p>
-            <p><strong>Position Size:</strong> $100 ÷ $5.00 = 20 shares</p>
-          </div>
-        </div>
-
-        <div className="grid grid-cols-2 gap-4">
-          <div>
-            <h4 className="font-semibold text-slate-300 mb-2">Advantages</h4>
-            <ul className="text-sm text-slate-400 space-y-1">
-              <li>• Adapts to volatility</li>
-              <li>• Objective stop placement</li>
-              <li>• Reduces noise trades</li>
-              <li>• Market-responsive</li>
-            </ul>
-          </div>
-
-          <div>
-            <h4 className="font-semibold text-slate-300 mb-2">Disadvantages</h4>
-            <ul className="text-sm text-slate-400 space-y-1">
-              <li>• May result in wide stops</li>
-              <li>• Lagging indicator</li>
-              <li>• Requires technical analysis</li>
-              <li>• Complex for beginners</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </TabsContent>
-
-  <TabsContent value="volatility" className="mt-6">
-    <div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
-      <h3 className="text-xl font-semibold text-slate-200 mb-4">Volatility-Based Sizing</h3>
-
-      <div className="bg-slate-900/50 dark:bg-slate-800 p-4 rounded-lg border border-slate-200 dark:border-slate-700 mb-4">
-        <p className="font-medium text-slate-300 mb-2">Formula:</p>
-        <code className="text-sm bg-slate-100 dark:bg-slate-700 px-2 py-1 rounded">
-          Position Size = (Base Size) ÷ (Volatility Factor)
-        </code>
-        <p className="text-xs text-slate-400 mt-2">
-          Volatility Factor = Standard Deviation of Returns
-        </p>
-      </div>
-
-      <div className="space-y-4">
-        <div>
-          <h4 className="font-semibold text-slate-300 mb-2">Volatility Adjustment Table</h4>
-          <div className="overflow-x-auto">
-            <table className="w-full text-sm border-collapse border border-slate-300 dark:border-slate-700 rounded-lg overflow-hidden">
-              <thead>
-                <tr className="bg-slate-100 dark:bg-slate-800">
-                  <th className="border border-slate-300 dark:border-slate-700 p-2 text-left">Volatility Level</th>
-                  <th className="border border-slate-300 dark:border-slate-700 p-2 text-left">Position Multiplier</th>
-                  <th className="border border-slate-300 dark:border-slate-700 p-2 text-left">Example</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td className="border border-slate-300 dark:border-slate-700 p-2">Low (< 20%)</td>
-                  <td className="border border-slate-300 dark:border-slate-700 p-2">1.2x</td>
-                  <td className="border border-slate-300 dark:border-slate-700 p-2">Large cap stocks</td>
-                </tr>
-                <tr>
-                  <td className="border border-slate-300 dark:border-slate-700 p-2">Medium (20-40%)</td>
-                  <td className="border border-slate-300 dark:border-slate-700 p-2">1.0x</td>
-                  <td className="border border-slate-300 dark:border-slate-700 p-2">Mid cap stocks</td>
-                </tr>
-                <tr>
-                  <td className="border border-slate-300 dark:border-slate-700 p-2">High (> 40%)</td>
-                  <td className="border border-slate-300 dark:border-slate-700 p-2">0.5x</td>
-                  <td className="border border-slate-300 dark:border-slate-700 p-2">Small cap, crypto</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-
-        <div className="grid grid-cols-2 gap-4">
-          <div>
-            <h4 className="font-semibold text-slate-300 mb-2">Advantages</h4>
-            <ul className="text-sm text-slate-400 space-y-1">
-              <li>• Risk-adjusted sizing</li>
-              <li>• Reduces volatile exposure</li>
-              <li>• Portfolio stabilization</li>
-              <li>• Systematic approach</li>
-            </ul>
-          </div>
-
-          <div>
-            <h4 className="font-semibold text-slate-300 mb-2">Disadvantages</h4>
-            <ul className="text-sm text-slate-400 space-y-1">
-              <li>• Historical volatility focus</li>
-              <li>• May miss opportunities</li>
-              <li>• Complex calculation</li>
-              <li>• Requires data tracking</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </TabsContent>
-</Tabs>
-
-## Stop Loss Strategies
-
-<div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 my-8">
-
-  <div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
-    <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-slate-800 rounded-xl flex items-center justify-center">
-        <span className="text-white text-lg"></span>
-      </div>
-      <h3 className="text-lg font-semibold text-slate-200">Technical Stop Loss</h3>
-    </div>
-    <p className="text-slate-400 text-sm mb-4">
-      Based on chart patterns, support/resistance levels, and technical indicators.
-    </p>
-    <div className="space-y-2">
-      <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-slate-800 rounded-full"></span>
-        <span className="text-xs text-slate-400">Support/resistance levels</span>
-      </div>
-      <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-slate-800 rounded-full"></span>
-        <span className="text-xs text-slate-400">Moving averages</span>
-      </div>
-      <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-slate-800 rounded-full"></span>
-        <span className="text-xs text-slate-400">Trend lines</span>
-      </div>
-      <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-slate-800 rounded-full"></span>
-        <span className="text-xs text-slate-400">Chart patterns</span>
-      </div>
-    </div>
-  </div>
-
-  <div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
-    <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-slate-800 rounded-xl flex items-center justify-center">
-        <span className="text-white text-lg">%</span>
-      </div>
-      <h3 className="text-lg font-semibold text-slate-200">Percentage Stop Loss</h3>
-    </div>
-    <p className="text-slate-400 text-sm mb-4">
-      Fixed percentage distance from entry price, simple and consistent approach.
-    </p>
-    <div className="space-y-2">
-      <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-slate-800 rounded-full"></span>
-        <span className="text-xs text-slate-400">Day trading: 0.5-2%</span>
-      </div>
-      <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-slate-800 rounded-full"></span>
-        <span className="text-xs text-slate-400">Swing trading: 2-8%</span>
-      </div>
-      <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-slate-800 rounded-full"></span>
-        <span className="text-xs text-slate-400">Position trading: 8-20%</span>
-      </div>
-    </div>
-  </div>
-
-  <div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
-    <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-slate-800 rounded-xl flex items-center justify-center">
-        <span className="text-white text-lg"></span>
-      </div>
-      <h3 className="text-lg font-semibold text-slate-200">Trailing Stop Loss</h3>
-    </div>
-    <p className="text-slate-400 text-sm mb-4">
-      Adjusts upward with favorable price movement to lock in profits.
-    </p>
-    <div className="space-y-2">
-      <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-slate-800 rounded-full"></span>
-        <span className="text-xs text-slate-400">Fixed percentage trail</span>
-      </div>
-      <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-slate-800 rounded-full"></span>
-        <span className="text-xs text-slate-400">ATR-based trailing</span>
-      </div>
-      <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-slate-800 rounded-full"></span>
-        <span className="text-xs text-slate-400">Chandelier exit</span>
-      </div>
-    </div>
-  </div>
-
-  <div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
-    <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-slate-800 rounded-xl flex items-center justify-center">
-        <span className="text-white text-lg">TIME</span>
-      </div>
-      <h3 className="text-lg font-semibold text-slate-200">Time-Based Stop</h3>
-    </div>
-    <p className="text-slate-400 text-sm mb-4">
-      Exit positions after a predetermined time period regardless of price.
-    </p>
-    <div className="space-y-2">
-      <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-slate-800 rounded-full"></span>
-        <span className="text-xs text-slate-400">Intraday time limits</span>
-      </div>
-      <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-slate-800 rounded-full"></span>
-        <span className="text-xs text-slate-400">Earnings event exits</span>
-      </div>
-      <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-slate-800 rounded-full"></span>
-        <span className="text-xs text-slate-400">Maximum hold periods</span>
-      </div>
-    </div>
-  </div>
-
-  <div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
-    <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-slate-800 rounded-xl flex items-center justify-center">
-        <span className="text-white text-lg"></span>
-      </div>
-      <h3 className="text-lg font-semibold text-slate-200">Volatility Stop</h3>
-    </div>
-    <p className="text-slate-400 text-sm mb-4">
-      Based on the asset's volatility characteristics and market conditions.
-    </p>
-    <div className="space-y-2">
-      <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-slate-800 rounded-full"></span>
-        <span className="text-xs text-slate-400">Average True Range (ATR)</span>
-      </div>
-      <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-slate-800 rounded-full"></span>
-        <span className="text-xs text-slate-400">Standard deviation bands</span>
-      </div>
-      <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-slate-800 rounded-full"></span>
-        <span className="text-xs text-slate-400">Keltner channels</span>
-      </div>
-    </div>
-  </div>
-
-  <div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
-    <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-slate-800 rounded-xl flex items-center justify-center">
-        <span className="text-white text-lg"></span>
-      </div>
-      <h3 className="text-lg font-semibold text-slate-200">Mental Stop Loss</h3>
-    </div>
-    <p className="text-slate-400 text-sm mb-4">
-      Predetermined exit level held mentally rather than as a placed order.
-    </p>
-    <div className="space-y-2">
-      <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-slate-800 rounded-full"></span>
-        <span className="text-xs text-slate-400">Requires discipline</span>
-      </div>
-      <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-slate-800 rounded-full"></span>
-        <span className="text-xs text-slate-400">Avoids stop hunting</span>
-      </div>
-      <div className="flex items-center gap-2">
-        <span className="w-2 h-2 bg-slate-800 rounded-full"></span>
-        <span className="text-xs text-slate-400">Flexible adjustment</span>
-      </div>
-    </div>
-  </div>
-
-</div>
-
-## Portfolio Risk Management
-
-<div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
-  <h3 className="text-xl font-bold text-slate-200 mb-6">Portfolio Heat and Correlation Management</h3>
-
-  <div className="grid grid-cols-1 md:grid-cols-2 gap-6">
-    <div>
-      <h4 className="font-semibold text-slate-300 mb-3">Portfolio Heat Calculation</h4>
-      <div className="space-y-3">
-        <div className="p-3 bg-slate-900/50 dark:bg-slate-800 rounded-lg border border-slate-200 dark:border-slate-700">
-          <p className="font-medium text-slate-300 text-sm">Total Portfolio Risk</p>
-          <p className="text-xs text-slate-400">Sum of risk across all open positions</p>
-          <code className="text-xs bg-slate-100 dark:bg-slate-700 px-2 py-1 rounded mt-1 block">
-            Portfolio Heat = Σ(Position Risk %)
-          </code>
-        </div>
-
-        <div className="p-3 bg-slate-900/50 dark:bg-slate-800 rounded-lg border border-slate-200 dark:border-slate-700">
-          <p className="font-medium text-slate-300 text-sm">Maximum Heat Levels</p>
-          <div className="text-xs text-slate-400 mt-1 space-y-1">
-            <p>• Conservative: 6-10%</p>
-            <p>• Moderate: 10-15%</p>
-            <p>• Aggressive: 15-20%</p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div>
-      <h4 className="font-semibold text-slate-300 mb-3">Correlation Management</h4>
-      <div className="space-y-3">
-        <div className="p-3 bg-slate-900/50 dark:bg-slate-800 rounded-lg border border-slate-200 dark:border-slate-700">
-          <p className="font-medium text-slate-300 text-sm">Sector Concentration</p>
-          <p className="text-xs text-slate-400">Limit exposure to single sectors</p>
-          <div className="text-xs text-slate-400 mt-1">
-            Max 25% per sector
-          </div>
-        </div>
-
-        <div className="p-3 bg-slate-900/50 dark:bg-slate-800 rounded-lg border border-slate-200 dark:border-slate-700">
-          <p className="font-medium text-slate-300 text-sm">Asset Class Limits</p>
-          <div className="text-xs text-slate-400 mt-1 space-y-1">
-            <p>• Stocks: 60-80%</p>
-            <p>• Bonds: 10-30%</p>
-            <p>• Alternatives: 5-15%</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-## Risk Management Tools & Technology
-
-<div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 my-8">
-
-  <div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
-    <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-slate-800 rounded-xl flex items-center justify-center">
-        <span className="text-white text-lg"></span>
-      </div>
-      <h3 className="text-lg font-semibold text-slate-200">Trading Platforms</h3>
-    </div>
-    <div className="space-y-2 text-sm">
-      <div className="flex items-center justify-between">
-        <span className="text-slate-400">Think or Swim</span>
-        <span className="px-2 py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded text-xs">Advanced</span>
-      </div>
-      <div className="flex items-center justify-between">
-        <span className="text-slate-400">Interactive Brokers</span>
-        <span className="px-2 py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded text-xs">Pro</span>
-      </div>
-      <div className="flex items-center justify-between">
-        <span className="text-slate-400">MetaTrader</span>
-        <span className="px-2 py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded text-xs">Popular</span>
-      </div>
-    </div>
-  </div>
-
-  <div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
-    <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-slate-800 rounded-xl flex items-center justify-center">
-        <span className="text-white text-lg"></span>
-      </div>
-      <h3 className="text-lg font-semibold text-slate-200">Risk Calculators</h3>
-    </div>
-    <div className="space-y-2 text-sm">
-      <div className="flex items-center justify-between">
-        <span className="text-slate-400">Position Sizer Pro</span>
-        <span className="px-2 py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded text-xs">Mobile</span>
-      </div>
-      <div className="flex items-center justify-between">
-        <span className="text-slate-400">Trade Risk Calculator</span>
-        <span className="px-2 py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded text-xs">Web</span>
-      </div>
-      <div className="flex items-center justify-between">
-        <span className="text-slate-400">Excel Spreadsheets</span>
-        <span className="px-2 py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded text-xs">Custom</span>
-      </div>
-    </div>
-  </div>
-
-  <div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
-    <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-slate-800 rounded-xl flex items-center justify-center">
-        <span className="text-white text-lg">robot</span>
-      </div>
-      <h3 className="text-lg font-semibold text-slate-200">Automated Tools</h3>
-    </div>
-    <div className="space-y-2 text-sm">
-      <div className="flex items-center justify-between">
-        <span className="text-slate-400">Stop Loss Orders</span>
-        <span className="px-2 py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded text-xs">Essential</span>
-      </div>
-      <div className="flex items-center justify-between">
-        <span className="text-slate-400">Bracket Orders</span>
-        <span className="px-2 py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded text-xs">Advanced</span>
-      </div>
-      <div className="flex items-center justify-between">
-        <span className="text-slate-400">Trailing Stops</span>
-        <span className="px-2 py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded text-xs">Dynamic</span>
-      </div>
-    </div>
-  </div>
-
-</div>
-
 ## Common Risk Management Mistakes
 
 <div className="space-y-6 my-8">
@@ -682,16 +135,16 @@ icon: 'shield-check'
   <div className="bg-slate-800/50 p-6 rounded-xl border border-slate-700">
     <div className="flex items-start gap-4">
       <div className="w-12 h-12 bg-slate-800 rounded-xl flex items-center justify-center flex-shrink-0">
-        <span className="text-white text-xl">NO</span>
+        <Icon icon="circle-x" size={24} className="text-white" />
       </div>
       <div>
-        <h3 className="text-lg font-semibold text-slate-200 mb-2">Over-leveraging</h3>
+        <span className="text-lg font-semibold text-slate-200 mb-2">Over-leveraging</span>
         <p className="text-slate-400 text-sm mb-3">
           Using too much capital per trade or excessive margin, leading to large losses that can wipe out accounts.
         </p>
         <div className="flex flex-wrap gap-2">
-          <span className="px-3 py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded-full text-xs">Solution: 1-2% risk per trade</span>
-          <span className="px-3 py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded-full text-xs">Use position sizing formulas</span>
+          <span className="py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded-full text-xs">Solution: 1-2% risk per trade</span>
+          <span className="py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded-full text-xs">Use position sizing formulas</span>
         </div>
       </div>
     </div>
@@ -700,16 +153,16 @@ icon: 'shield-check'
   <div className="bg-slate-800/50 p-6 rounded-xl border border-slate-700">
     <div className="flex items-start gap-4">
       <div className="w-12 h-12 bg-slate-800 rounded-xl flex items-center justify-center flex-shrink-0">
-        <span className="text-white text-xl"></span>
+        <Icon icon="circle-x" size={24} className="text-white" />
       </div>
       <div>
-        <h3 className="text-lg font-semibold text-slate-200 mb-2">No Stop Losses</h3>
+        <span className="text-lg font-semibold text-slate-200 mb-2">No Stop Losses</span>
         <p className="text-slate-400 text-sm mb-3">
           Failing to set stop losses or moving them further away when trades go against you.
         </p>
         <div className="flex flex-wrap gap-2">
-          <span className="px-3 py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded-full text-xs">Always set stops before entry</span>
-          <span className="px-3 py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded-full text-xs">Never move stops against you</span>
+          <span className="py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded-full text-xs">Always set stops before entry</span>
+          <span className="py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded-full text-xs">Never move stops against you</span>
         </div>
       </div>
     </div>
@@ -718,16 +171,16 @@ icon: 'shield-check'
   <div className="bg-slate-800/50 p-6 rounded-xl border border-slate-700">
     <div className="flex items-start gap-4">
       <div className="w-12 h-12 bg-slate-800 rounded-xl flex items-center justify-center flex-shrink-0">
-        <span className="text-white text-xl"></span>
+        <Icon icon="circle-x" size={24} className="text-white" />
       </div>
       <div>
-        <h3 className="text-lg font-semibold text-slate-200 mb-2">Emotional Decision Making</h3>
+        <span className="text-lg font-semibold text-slate-200 mb-2">Emotional Decision Making</span>
         <p className="text-slate-400 text-sm mb-3">
           Letting fear and greed drive trading decisions instead of following predetermined rules.
         </p>
         <div className="flex flex-wrap gap-2">
-          <span className="px-3 py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded-full text-xs">Follow your trading plan</span>
-          <span className="px-3 py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded-full text-xs">Use mechanical systems</span>
+          <span className="py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded-full text-xs">Follow your trading plan</span>
+          <span className="py-1 bg-gray-100 dark:bg-gray-900/30 text-gray-700 dark:text-gray-300 rounded-full text-xs">Use mechanical systems</span>
         </div>
       </div>
     </div>
@@ -740,66 +193,6 @@ icon: 'shield-check'
 
   Even the best trading strategies will fail without proper risk management. More traders lose money due to poor risk management than bad strategy selection. Always prioritize capital preservation over profit maximization.
 </Warning>
-
-## Risk Management Checklist
-
-<div className="bg-slate-900/50 p-6 rounded-xl border border-slate-700">
-  <h3 className="text-xl font-bold text-slate-200 mb-4">Pre-Trade Checklist</h3>
-
-  <div className="grid grid-cols-1 md:grid-cols-2 gap-6">
-    <div>
-      <h4 className="font-semibold text-slate-300 mb-3">Before Every Trade</h4>
-      <div className="space-y-2">
-        <label className="flex items-center gap-3 cursor-pointer">
-          <input type="checkbox" className="w-4 h-4 text-gray-600 rounded"/>
-          <span className="text-sm text-slate-400">Position size calculated</span>
-        </label>
-        <label className="flex items-center gap-3 cursor-pointer">
-          <input type="checkbox" className="w-4 h-4 text-gray-600 rounded"/>
-          <span className="text-sm text-slate-400">Stop loss level determined</span>
-        </label>
-        <label className="flex items-center gap-3 cursor-pointer">
-          <input type="checkbox" className="w-4 h-4 text-gray-600 rounded"/>
-          <span className="text-sm text-slate-400">Take profit targets set</span>
-        </label>
-        <label className="flex items-center gap-3 cursor-pointer">
-          <input type="checkbox" className="w-4 h-4 text-gray-600 rounded"/>
-          <span className="text-sm text-slate-400">Risk-reward ratio ≥ 1:1</span>
-        </label>
-        <label className="flex items-center gap-3 cursor-pointer">
-          <input type="checkbox" className="w-4 h-4 text-gray-600 rounded"/>
-          <span className="text-sm text-slate-400">Portfolio heat under limit</span>
-        </label>
-      </div>
-    </div>
-
-    <div>
-      <h4 className="font-semibold text-slate-300 mb-3">Daily Review</h4>
-      <div className="space-y-2">
-        <label className="flex items-center gap-3 cursor-pointer">
-          <input type="checkbox" className="w-4 h-4 text-gray-600 rounded"/>
-          <span className="text-sm text-slate-400">Review all open positions</span>
-        </label>
-        <label className="flex items-center gap-3 cursor-pointer">
-          <input type="checkbox" className="w-4 h-4 text-gray-600 rounded"/>
-          <span className="text-sm text-slate-400">Check portfolio correlation</span>
-        </label>
-        <label className="flex items-center gap-3 cursor-pointer">
-          <input type="checkbox" className="w-4 h-4 text-gray-600 rounded"/>
-          <span className="text-sm text-slate-400">Update trailing stops</span>
-        </label>
-        <label className="flex items-center gap-3 cursor-pointer">
-          <input type="checkbox" className="w-4 h-4 text-gray-600 rounded"/>
-          <span className="text-sm text-slate-400">Record trade performance</span>
-        </label>
-        <label className="flex items-center gap-3 cursor-pointer">
-          <input type="checkbox" className="w-4 h-4 text-gray-600 rounded"/>
-          <span className="text-sm text-slate-400">Review risk metrics</span>
-        </label>
-      </div>
-    </div>
-  </div>
-</div>
 
 ## Conclusion
 
